[gd_scene load_steps=3 format=3 uid="uid://b0jq3lkvi8056"]

[ext_resource type="Script" path="res://scripts/debug_menu_android.gd" id="1_5oyc3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vv2k"]
bg_color = Color(0, 0, 0, 0.254902)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Debug menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5oyc3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 139.0
offset_right = 227.0
offset_bottom = 455.0
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_3vv2k")

[node name="Debug" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 227.0
offset_bottom = 23.0
text = "Debug menu for Android"
horizontal_alignment = 1

[node name="Freelook" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_top = 31.0
offset_right = 157.0
offset_bottom = 54.0
bbcode_enabled = true
text = "[center]Freelook    [color=green]ON[/color]"

[node name="Noclip" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_top = 58.0
offset_right = 157.0
offset_bottom = 81.0
bbcode_enabled = true
text = "[center]Noclip    [color=green]ON[/color]"
scroll_active = false
autowrap_mode = 0

[node name="3DLook" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_top = 82.6667
offset_right = 157.0
offset_bottom = 105.667
bbcode_enabled = true
text = "[center]3DLook    [color=green]ON[/color]"
scroll_active = false
autowrap_mode = 0

[node name="FreelookBTN" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 156.0
offset_top = 30.0
offset_right = 215.0
offset_bottom = 61.0
scale = Vector2(0.8, 0.8)
text = "Toggle"

[node name="NoclipBTN" type="Button" parent="Panel"]
offset_left = 156.0
offset_top = 56.0
offset_right = 215.0
offset_bottom = 87.0
scale = Vector2(0.8, 0.8)
text = "Toggle"

[node name="3DLookBTN" type="Button" parent="Panel"]
offset_left = 156.0
offset_top = 80.6667
offset_right = 215.0
offset_bottom = 111.667
scale = Vector2(0.8, 0.8)
text = "Toggle"

[connection signal="pressed" from="Panel/FreelookBTN" to="." method="_on_freelook_btn_pressed"]
[connection signal="pressed" from="Panel/NoclipBTN" to="." method="_on_noclip_btn_pressed"]
[connection signal="pressed" from="Panel/3DLookBTN" to="." method="_on_d_look_btn_pressed"]
